--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "import tensorflow as tf"
+    "import tensorflow as tf\n",
+    "import pickle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,84 +37,8 @@
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1467810369</th>\n",
-       "      <th>Mon Apr 06 22:19:45 PDT 2009</th>\n",
-       "      <th>NO_QUERY</th>\n",
-       "      <th>_TheSpecialOne_</th>\n",
-       "      <th>@switchfoot http://twitpic.com/2y1zl - Awww, that's a bummer.  You shoulda got David Carr of Third Day to do it. ;D</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1467810672</td>\n",
-       "      <td>Mon Apr 06 22:19:49 PDT 2009</td>\n",
-       "      <td>NO_QUERY</td>\n",
-       "      <td>scotthamilton</td>\n",
-       "      <td>is upset that he can't update his Facebook by ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1467810917</td>\n",
-       "      <td>Mon Apr 06 22:19:53 PDT 2009</td>\n",
-       "      <td>NO_QUERY</td>\n",
-       "      <td>mattycus</td>\n",
-       "      <td>@Kenichan I dived many times for the ball. Man...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1467811184</td>\n",
-       "      <td>Mon Apr 06 22:19:57 PDT 2009</td>\n",
-       "      <td>NO_QUERY</td>\n",
-       "      <td>ElleCTF</td>\n",
-       "      <td>my whole body feels itchy and like its on fire</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1467811193</td>\n",
-       "      <td>Mon Apr 06 22:19:57 PDT 2009</td>\n",
-       "      <td>NO_QUERY</td>\n",
-       "      <td>Karoli</td>\n",
-       "      <td>@nationwideclass no, it's not behaving at all....</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1467811372</td>\n",
-       "      <td>Mon Apr 06 22:20:00 PDT 2009</td>\n",
-       "      <td>NO_QUERY</td>\n",
-       "      <td>joy_wolf</td>\n",
-       "      <td>@Kwesidei not the whole crew</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
        "   0  1467810369  Mon Apr 06 22:19:45 PDT 2009  NO_QUERY _TheSpecialOne_  \\\n",
        "0  0  1467810672  Mon Apr 06 22:19:49 PDT 2009  NO_QUERY   scotthamilton   \n",
@@ -128,11 +53,11 @@
        "2    my whole body feels itchy and like its on fire                                                                    \n",
        "3  @nationwideclass no, it's not behaving at all....                                                                   \n",
        "4                      @Kwesidei not the whole crew                                                                    "
-      ]
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n      <th>1467810369</th>\n      <th>Mon Apr 06 22:19:45 PDT 2009</th>\n      <th>NO_QUERY</th>\n      <th>_TheSpecialOne_</th>\n      <th>@switchfoot http://twitpic.com/2y1zl - Awww, that's a bummer.  You shoulda got David Carr of Third Day to do it. ;D</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>1467810672</td>\n      <td>Mon Apr 06 22:19:49 PDT 2009</td>\n      <td>NO_QUERY</td>\n      <td>scotthamilton</td>\n      <td>is upset that he can't update his Facebook by ...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0</td>\n      <td>1467810917</td>\n      <td>Mon Apr 06 22:19:53 PDT 2009</td>\n      <td>NO_QUERY</td>\n      <td>mattycus</td>\n      <td>@Kenichan I dived many times for the ball. Man...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0</td>\n      <td>1467811184</td>\n      <td>Mon Apr 06 22:19:57 PDT 2009</td>\n      <td>NO_QUERY</td>\n      <td>ElleCTF</td>\n      <td>my whole body feels itchy and like its on fire</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0</td>\n      <td>1467811193</td>\n      <td>Mon Apr 06 22:19:57 PDT 2009</td>\n      <td>NO_QUERY</td>\n      <td>Karoli</td>\n      <td>@nationwideclass no, it's not behaving at all....</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0</td>\n      <td>1467811372</td>\n      <td>Mon Apr 06 22:20:00 PDT 2009</td>\n      <td>NO_QUERY</td>\n      <td>joy_wolf</td>\n      <td>@Kwesidei not the whole crew</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 4
     }
    ],
    "source": [
@@ -155,84 +80,8 @@
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>target</th>\n",
-       "      <th>ids</th>\n",
-       "      <th>date</th>\n",
-       "      <th>flag</th>\n",
-       "      <th>user</th>\n",
-       "      <th>TweetText</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1467810672</td>\n",
-       "      <td>Mon Apr 06 22:19:49 PDT 2009</td>\n",
-       "      <td>NO_QUERY</td>\n",
-       "      <td>scotthamilton</td>\n",
-       "      <td>is upset that he can't update his Facebook by ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1467810917</td>\n",
-       "      <td>Mon Apr 06 22:19:53 PDT 2009</td>\n",
-       "      <td>NO_QUERY</td>\n",
-       "      <td>mattycus</td>\n",
-       "      <td>@Kenichan I dived many times for the ball. Man...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1467811184</td>\n",
-       "      <td>Mon Apr 06 22:19:57 PDT 2009</td>\n",
-       "      <td>NO_QUERY</td>\n",
-       "      <td>ElleCTF</td>\n",
-       "      <td>my whole body feels itchy and like its on fire</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1467811193</td>\n",
-       "      <td>Mon Apr 06 22:19:57 PDT 2009</td>\n",
-       "      <td>NO_QUERY</td>\n",
-       "      <td>Karoli</td>\n",
-       "      <td>@nationwideclass no, it's not behaving at all....</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1467811372</td>\n",
-       "      <td>Mon Apr 06 22:20:00 PDT 2009</td>\n",
-       "      <td>NO_QUERY</td>\n",
-       "      <td>joy_wolf</td>\n",
-       "      <td>@Kwesidei not the whole crew</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
        "   target         ids                          date      flag           user  \\\n",
        "0       0  1467810672  Mon Apr 06 22:19:49 PDT 2009  NO_QUERY  scotthamilton   \n",
@@ -247,11 +96,11 @@
        "2    my whole body feels itchy and like its on fire   \n",
        "3  @nationwideclass no, it's not behaving at all....  \n",
        "4                      @Kwesidei not the whole crew   "
-      ]
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>target</th>\n      <th>ids</th>\n      <th>date</th>\n      <th>flag</th>\n      <th>user</th>\n      <th>TweetText</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>1467810672</td>\n      <td>Mon Apr 06 22:19:49 PDT 2009</td>\n      <td>NO_QUERY</td>\n      <td>scotthamilton</td>\n      <td>is upset that he can't update his Facebook by ...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0</td>\n      <td>1467810917</td>\n      <td>Mon Apr 06 22:19:53 PDT 2009</td>\n      <td>NO_QUERY</td>\n      <td>mattycus</td>\n      <td>@Kenichan I dived many times for the ball. Man...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0</td>\n      <td>1467811184</td>\n      <td>Mon Apr 06 22:19:57 PDT 2009</td>\n      <td>NO_QUERY</td>\n      <td>ElleCTF</td>\n      <td>my whole body feels itchy and like its on fire</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0</td>\n      <td>1467811193</td>\n      <td>Mon Apr 06 22:19:57 PDT 2009</td>\n      <td>NO_QUERY</td>\n      <td>Karoli</td>\n      <td>@nationwideclass no, it's not behaving at all....</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0</td>\n      <td>1467811372</td>\n      <td>Mon Apr 06 22:20:00 PDT 2009</td>\n      <td>NO_QUERY</td>\n      <td>joy_wolf</td>\n      <td>@Kwesidei not the whole crew</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 6
     }
    ],
    "source": [
@@ -264,8 +113,8 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "252\n"
      ]
@@ -293,12 +142,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "data, target = df['TweetText'].values, df['target'].values\n",
     "target[target==4] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class_mapping = {0 : 'Negative tweet', 1: 'Positive tweet'}\n",
+    "\n",
+    "with open(r'artifacts/class_mapping.pkl', 'wb') as handle:\n",
+    "    pickle.dump(class_mapping, handle, protocol=pickle.HIGHEST_PROTOCOL)"
    ]
   },
   {
@@ -339,7 +200,10 @@
    "outputs": [],
    "source": [
     "tokenizer = Tokenizer()\n",
-    "tokenizer.fit_on_texts(X_train)"
+    "tokenizer.fit_on_texts(X_train)\n",
+    "\n",
+    "with open(r'artifacts/tokenizer.pkl', 'wb') as handle:\n",
+    "    pickle.dump(tokenizer, handle, protocol=pickle.HIGHEST_PROTOCOL)"
    ]
   },
   {
@@ -1466,7 +1330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.10-final"
   }
  },
  "nbformat": 4,
